src/components/Home/styles.module.css
@media only screen and (max-width: 1250px) {
  .Home {
    z-index: -1 !important;
  }

  .Home>.RowContainer>.Illustration {
    width: 375px !important;
  }

  .Home>.RowContainer>.ColumnContainer {
    padding: var(--padding-mobile) !important;
  }

  .Illustration {
    margin-bottom: 100px !important;
  }
}

@media only screen and (max-width: 600px) {
  .Home>.RowContainer>.ColumnContainer>.Title {
    font: 500 2em 'Rubik', sans-serif !important;
  }

  .Home>.RowContainer>.ColumnContainer>.Subtitle {
    font: var(--medium-regular-font) !important;
    line-height: 1.6em !important;
  }

  .Home>.RowContainer>.ColumnContainer>.LinkParagraph {
    font: var(--x-small-regular-font) !important;
  }
}

.Home {
  position: relative;
  min-height: var(--home-min-height);
  margin-top: var(--home-margin-top);
}

.Home>.RowContainer {
  display: flex;
  flex-flow: row wrap;
  align-items: center;
  justify-content: space-around;
}

.Home>.RowContainer>.Illustration {
  width: 450px;
  animation: pop-up .5s forwards;
  user-select: none;
  z-index: -1000;
}

.Home>.RowContainer>.ColumnContainer {
  display: flex;
  flex-flow: column nowrap;
  align-items: space-around;
  padding: var(--padding-desktop);
  max-width: 740px;
  gap: var(--gap-large);
  animation: pop-up var(--animation-duration) forwards;
}

.Home>.RowContainer>.ColumnContainer>.LinkParagraph {
  color: var(--white);
  font: var(--small-regular-font);
}

.Home>.RowContainer>.ColumnContainer>.LinkParagraph>a {
  color: var(--white);
  font: var(--small-strong-font);
}

.Home>.RowContainer>.ColumnContainer>.LinkParagraph>a:hover {
  filter: brightness(var(--button-dim-filter));
}

.Home>.RowContainer>.ColumnContainer>.Title {
  color: var(--white);
  font: var(--h1-font);
}

.Home>.RowContainer>.ColumnContainer>.Subtitle {
  color: var(--white);
  font: var(--h4-sub-font);
  line-height: 2rem;
}

/* waves */
.Wave {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  animation-delay: 0s;
  z-index: -1000;
}

.Wave1 {
  height: 60px;
  background-image: url('./assets/wave1.png');
  background-size: 1000px 60px;
  opacity: .2;
  animation: wavvy 25s linear infinite;
}

.Wave2 {
  height: 50px;
  background-image: url('./assets/wave2.png');
  background-size: 1000px 50px;
  opacity: .2;
  animation: wavvy 30s linear infinite;
}

.Wave3 {
  height: 30px;
  background-image: url('./assets/wave1.png');
  background-size: 1000px 30px;
  opacity: 1;
  animation: wavvy 40s linear infinite;
}

@keyframes wavvy {
  0% {
    background-position-x: 0;
  }

  100% {
    background-position-x: 1000px;
  }
}

@keyframes pop-up {
  0% {
    opacity: 0;
    transform: scale(.9);
  }

  100% {
    opacity: 1;
    transform: scale(1);
  }
}

